Add closing `import-html` tag. No self closing support

--- a/examples/import-html/index.html
+++ b/examples/import-html/index.html
@@ -21,11 +21,12 @@
 </header-group>
 
 <!-- YOUR CONTENT HERE -->
+
 <import-html src=/examples/import-html/html-fragment.html>
   Import Hasn't Happened
 </import-html>
 
-<import-html src=/examples/import-html/html-fragment-footer.html>
+<import-html src=/examples/import-html/html-fragment-footer.html></import-html>
 
 <script>
   Element `import-html`
