Dammit @brandondees stop trolling me

--- a/examples/import-html/html-fragment.html
+++ b/examples/import-html/html-fragment.html
@@ -1,5 +1,5 @@
 <!-- nested stylesheets appear not to load -->
-<link rel=stylesheet src=nested-style.css />
+<link rel=stylesheet href=nested-style.css />
 
 <!-- inline styles apply -->
 <style>
