Nested Nested styles and scripts

--- a/examples/import-html/html-fragment-footer.html
+++ b/examples/import-html/html-fragment-footer.html
@@ -3,3 +3,5 @@
   This footer can be re-used across pages without any server or build code.
 </footer>
 
+<import-html src=logo.html></import-html>
+
