Add text-editor to web components in examples/index.html

--- a/examples/index.html
+++ b/examples/index.html
@@ -42,9 +42,6 @@
     <a title='<input-output>' href=/examples/input-output.html>&lt;input-output&gt;</a>
 
   <li>
-    <a title='<to-do>' href=/examples/to-do>&lt;to-do&gt;</a>
-
-  <li>
     <a title='<multiple-choice>' href=/examples/multiple-choice>&lt;multiple-choice&gt;</a>
 
   <li>
@@ -83,6 +80,10 @@
 
 <ul>
   <li>
+    <a title='<to-do>' href=/examples/to-do>&lt;to-do&gt;</a>
+
+  <li>
+    <a href=/examples/text-editor>&lt;text-editor&gt;</a>
 
 </ul>
 
