Add text-editor to web components in index.html

--- a/index.html
+++ b/index.html
@@ -668,9 +668,6 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
           <a href=/examples/input-output.html>&lt;input-output&gt;</a>
 
         <li>
-          <a href=/examples/to-do>&lt;to-do&gt;</a>
-
-        <li>
           <a href=/examples/multiple-choice>&lt;multiple-choice&gt;</a>
 
         <li>
@@ -711,6 +708,11 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
     <nav>
       <ul>
         <li>
+          <a href=/examples/to-do>&lt;to-do&gt;</a>
+
+        <li>
+          <a href=/examples/text-editor>&lt;text-editor&gt;</a>
+
     </nav>
 
   </details>
