--- a/examples/text-editor/index.html
+++ b/examples/text-editor/index.html
@@ -1,1 +1,43 @@
-<h1>Hello World</h1>
+<title>&lt;text-editor&gt;</title>
+
+<link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
+<link rel=stylesheet href=https://devpunks.herokuapp.com/form.css>
+
+<script src=/snuggsi.es></script>
+<script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
+
+<link rel=import href=/examples/header-group>
+
+<header-group>
+  <h2 slot=header>&lt;text-editor&gt;</h2>
+  <a  slot=subheader title='See more component examples' href=/examples>See more component examples</a>
+</header-group>
+
+<text-editor>
+
+  <textarea></textarea>
+
+  <menu>
+  </menu>
+</text-editor>
+
+<script defer>
+
+// Element Definition -----------------------------
+
+Element `text-editor`
+
+// Class Description ------------------------------
+
+(class extends HTMLElement {
+
+  initialize ()
+    { this.append `🌎 ` }
+
+  get value ()
+    { return 'html markup string' }
+})
+
+</script>
+
+<script src=/browser-sync.es></script>
