Fix :bug: bug in `hello-world`'

--- a/examples/hello-world/index.html
+++ b/examples/hello-world/index.html
@@ -3,7 +3,7 @@
 
 <title>&lt;hello-world&gt;</title>
 
-<link rel=stylesheet href=https://devpunks.herokuappcom/typography.css>
+<link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
 <link rel=stylesheet href=hello-world/index.css>
 
 <script src=/snuggsi.es></script>
