--- a/examples/import-html/index.html
+++ b/examples/import-html/index.html
@@ -33,15 +33,15 @@
   (class extends HTMLElement {
 
     onconnect () {
-      this.innerHTML = 'Content Loading...'
+      this.textContent = 'Content Loading...'
       this.context.location = this.getAttribute `src`
 
-      let hdrs = new Headers({'Accept': 'text/html'})
+      let headers = new Headers ({ Accept: 'text/html' })
 
-      fetch(this.context.location, {mode: 'no-cors', headers: hdrs})
-        .then(res => { return res.text() })
-        .then(content => this.parse(content))
-        .catch(err => console.warn(err))
+      fetch (this.context.location, { mode: 'no-cors', headers })
+        .then  (response => return response.text ())
+        .then  (content  => this.parse (content))
+        .catch (error    => console.warn (error))
     }
 
     parse (string) {
@@ -65,4 +65,3 @@
 </script>
 
 <script src=/browser-sync.es></script>
-
