--- a/examples/index.html
+++ b/examples/index.html
@@ -30,6 +30,9 @@
     <a title='<hello-world>' href=/examples/hello-world>&lt;hello-world&gt;</a>
 
   <li>
+    <a title='<include->' href=/examples/include->&lt;include-&gt;</a>
+
+  <li>
     <a title='<header-group>' href=/examples/header-group/example.html>&lt;header-group&gt;</a>
 
   <li>
@@ -88,4 +91,3 @@
 
 
 <script src=/browser-sync.es></script>
-
