--- a/index.html
+++ b/index.html
@@ -656,6 +656,9 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
           <a href=/examples/hello-world>&lt;hello-world&gt;</a>
 
         <li>
+          <a href=/examples/include->&lt;include-&gt;</a>
+
+        <li>
           <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
 
         <li>
