Update broken link to `nav-view`

--- a/examples/index.html
+++ b/examples/index.html
@@ -54,7 +54,7 @@
     <a title='<fidget-spinner>' href=/examples/fidget-spinner>&lt;fidget-spinner&gt;</a>
 
   <li>
-    <a title='<nav-view>' href=/examples/nav-view>&lt;nav-view&gt;</a>
+    <a title='<nav-view>' href=/examples/nav-view/example.html>&lt;nav-view&gt;</a>
 
   <li>
     <a title='<user-list>' href=/examples/user-list>&lt;user-list&gt;</a>
