Add remote `to-do` app example

--- a/examples/include-/index.html
+++ b/examples/include-/index.html
@@ -9,6 +9,7 @@
 <script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=import href=/examples/header-group>
+<link rel=import href=http://snuggsi.herokuapp.com/examples/to-do/template.html>
 
 <style>
   import-html
@@ -19,6 +20,8 @@
   <h2 slot=header>&lt;include-&gt;</h2>
   <a  slot=subheader title='See more componentexamples' href=./>See more component examples</a>
 </header-group>
+
+<to-do></to-do>
 
 <!-- YOUR CONTENT HERE -->
 
