Convert to using https:

--- a/examples/include-/html-fragment.html
+++ b/examples/include-/html-fragment.html
@@ -9,7 +9,7 @@
 <h1>External Content</h1>
 
 <!-- images work -->
-<img width=600 height=200 src=//placecage.com/600/200 />
+<img width=600 height=200 src=https://placecage.com/600/200 />
 
 <!-- nested scripts appear not to execute -->
 <script>
