--- a/examples/include-/index.html
+++ b/examples/include-/index.html
@@ -9,7 +9,7 @@
 <script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=import href=/examples/header-group>
-<link rel=import href=http://snuggsi.herokuapp.com/examples/to-do/template.html>
+<link rel=import href=https://snuggsi.herokuapp.com/examples/to-do/template.html>
 
 <style>
   import-html
