Make all urls root relative

--- a/examples/include-/index.html
+++ b/examples/include-/index.html
@@ -8,7 +8,7 @@
 <script src=/></script>
 <script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
-<link rel=import href=/examples/header-group>
+<link rel=import href=https://snuggsi.herokuapp.com/examples/header-group>
 <link rel=import href=https://snuggsi.herokuapp.com/examples/to-do/template.html>
 
 <style>
@@ -25,11 +25,11 @@
 
 <!-- YOUR CONTENT HERE -->
 
-<include- src=include-/html-fragment.html>
+<include- src=/examples/include-/html-fragment.html>
   Import Hasn't Happened
 </include->
 
-<include- src=include-/html-fragment-footer.html></include->
+<include- src=/examples/include-/html-fragment-footer.html></include->
 
 <script>
   Element `include-`
