--- a/examples/include-/html-fragment-footer.html
+++ b/examples/include-/html-fragment-footer.html
@@ -3,5 +3,5 @@
   This footer can be re-used across pages without any server or build code.
 </footer>
 
-<include- src=include-/logo.html></import-html>
+<include- src=/examples/include-/logo.html></import-html>
 
