--- a/examples/include-/logo.html
+++ b/examples/include-/logo.html
@@ -1,6 +1,6 @@
 <img src=https://otvet.imgsmail.ru/download/0e7a5c49ff2c78ce878f0f47aa1d186c_i-1088.jpg alt=''>
 
 <h2>Yo dog. I heard you like imports so I put an import inside your import so you can import</h2>
-<script> alert `this is coming from logo inside footer inside index`</script>
+<script> console.log ('this is coming from logo inside footer inside index') </script>
 
-<link rel=stylesheet href=include-/nested-nested-style.css>
+<link rel=stylesheet href=/examples/include-/nested-nested-style.css>
