Add 3 different domains for downloaded script

--- a/examples/include-/html-fragment.html
+++ b/examples/include-/html-fragment.html
@@ -1,3 +1,5 @@
+<script src=http://snuggsi.herokuapp.com/browser-sync.es></script>
+
 <link rel=stylesheet href=/examples/include-/nested-style.css />
 
 <!-- inline styles apply -->
