--- a/examples/include-/logo.html
+++ b/examples/include-/logo.html
@@ -1,3 +1,5 @@
+<script src=https://snuggsi.now.sh/browser-sync.es></script>
+
 <img src=https://otvet.imgsmail.ru/download/0e7a5c49ff2c78ce878f0f47aa1d186c_i-1088.jpg alt=''>
 
 <h2>Yo dog. I heard you like imports so I put an import inside your import so you can import</h2>
