Ensure https protocol

--- a/examples/include-/html-fragment.html
+++ b/examples/include-/html-fragment.html
@@ -1,4 +1,4 @@
-<script src=http://snuggsi.herokuapp.com/browser-sync.es></script>
+<script src=https://snuggsi.herokuapp.com/browser-sync.es></script>
 
 <link rel=stylesheet href=/examples/include-/nested-style.css />
 
