--- a/examples/include-/index.html
+++ b/examples/include-/index.html
@@ -25,6 +25,8 @@
 
 <!-- YOUR CONTENT HERE -->
 
+<include- src=https://snuggsi.herokuapp.com/examples/header-group></include->
+
 <include- src=/examples/include-/html-fragment.html>
   Import Hasn't Happened
 </include->
