--- a/examples/include-/html-fragment-footer.html
+++ b/examples/include-/html-fragment-footer.html
@@ -1,4 +1,4 @@
-<script src=/browser-sync.es></script>
+<script src=https://snuggsi.now.sh/browser-sync.es></script>
 
 <footer>
   This footer can be re-used across pages without any server or build code.
