Fix broken stylesheet

--- a/examples/email-recipients/index.html
+++ b/examples/email-recipients/index.html
@@ -1,6 +1,6 @@
 <title>&lt;email&gt;</title>
 
-<link rel=stylesheet href=email/style.css>
+<link rel=stylesheet href=style.css>
 
 <email-recipients>
 
