Add comment on fallback input type=checkbox usage

--- a/examples/email-recipients/index.html
+++ b/examples/email-recipients/index.html
@@ -11,6 +11,7 @@
         title='Remove <{self}> from recipients'>x</button>
 
       <label>
+        <!-- `recipients` values when used  within `<form>` -->
         <input name=recipients[] type=checkbox value={self} checked>
         {self}
       </label>
