--- a/examples/email-recipients/index.html
+++ b/examples/email-recipients/index.html
@@ -33,6 +33,14 @@
 
 </email-recipients>
 
+<footer>
+<header>Comparable Examples</header>
+
+<ul>
+  <li>
+    <a href=https://github.com/ericgio/react-bootstrap-typeahead>React Typeahead</a>
+</footer>
+
 <script src=/snuggsi.es></script>
 <script defer>
 
