Add justification of text to mapping

--- a/examples/text-editor/index.html
+++ b/examples/text-editor/index.html
@@ -48,6 +48,9 @@ const actions = {
   bold: 'bold'
 , italic: 'italic'
 , underline: 'underline'
+, left: 'justifyLeft'
+, center: 'justifyCenter'
+, right: 'justifyRight'
 , strikethrough: 'strikeThrough'
 , ulist: 'insertUnorderedist'
 , olist: 'insertOrderedList'
