Add paragraph to mapping

--- a/examples/text-editor/index.html
+++ b/examples/text-editor/index.html
@@ -52,6 +52,7 @@ const actions = {
 , center: 'justifyCenter'
 , right: 'justifyRight'
 , strikethrough: 'strikeThrough'
+, paragraph: 'insertParagraph'
 , ulist: 'insertUnorderedist'
 , olist: 'insertOrderedList'
 , line: 'insertHorizontalRule'
