Change menu actions

--- a/examples/text-editor/index.html
+++ b/examples/text-editor/index.html
@@ -17,9 +17,9 @@
 
 <text-editor>
 
-  <menu>
+  <menu onclick=execute>
   <template name=actions>
-    <button icon={icon} title={title} onclick={action}>{title}</button>
+    <button name={name} icon={icon} title={title}>{title}</button>
   </template>
   </menu>
 
