--- a/examples/index.html
+++ b/examples/index.html
@@ -86,6 +86,14 @@
 
 </ul>
 
+<h3 id=polyfills>Polyfills</h3>
+
+<ul>
+  <li>
+    <a title='<datalist->' href=/examples/datalist->&lt;datalist-&gt;</a>
+
+</ul>
+
 
 <script src=/browser-sync.es></script>
 
