Add polyfills- to home page examples

--- a/index.html
+++ b/index.html
@@ -731,6 +731,18 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
   </details>
 
   <details>
+    <summary><a href=/examples#polyfills>&lt;polyfills-&gt;</a></summary>
+
+    <nav>
+      <ul>
+        <li>
+          <a href=/examples/datalist->&lt;datalist-&gt;</a>
+
+    </nav>
+
+  </details>
+
+  <details>
     <summary><a title=Mixins href=/examples#mixins>Mixins ()</a></summary>
 
     <nav>
