Setup initial class for datalist-

--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -21,4 +21,16 @@
   </datalist>
 </datalist->
 
+<script>
+
+  Element `datalist-`
+
+  (class extends HTMLElement {
+
+    initialize () {
+    }
+
+  })
+</script>
+
 <script src=/browser-sync.es></script>
