Use name attribute instead of text

--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -16,7 +16,7 @@
 <datalist->
   <datalist>
   <template name=options>
-    <option value={value}>{text}
+    <option value={value}>{name}
   </template>
   </datalist>
 </datalist->
