Check onidle callback for datalist

--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -35,8 +35,8 @@
       ]
     }
 
-    onconnect () {
-      console.log (this.select `option`)
+    onidle () {
+      console.log (this.selectAll `option`)
     }
   })
 </script>
