Return computed options property for datalist-

--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -38,6 +38,9 @@
     onidle () {
       console.log (this.selectAll `option`)
     }
+
+    get options ()
+      { return this.context.options }
   })
 </script>
 
