--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -1,6 +1,6 @@
 <title>&lt;datalist-&gt;</title>
 
-<script src=/></script>
+<script src=/snuggsi.es></script>
 <script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
