--- a/index.html
+++ b/index.html
@@ -621,6 +621,9 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
 
   <ul>
     <li>
+      <a href=/mixins>&lt;mixins&gt;</a>
+
+    <li>
       <a
         rel=help
         target=wikipedia
