Add `HTMLDataList.options` polyfill

--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -61,7 +61,11 @@
 
 
     polyfill (datalist) {
-      this.options = datalist.querySelectorAll `option:not(:disabled)`
+      const options =
+        datalist.querySelectorAll
+          `option:not(:disabled)`
+
+      datalist.options = Array.from (options)
     }
 
     onconnect () {
