Remove alert message

--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -19,9 +19,8 @@
 <datalist id=foo>
 
   <label>
-    or select from the list:
-    <select name=sex>
-      <option disabled selected value>Select Option
+    <select name=sex multiple>
+      <!-- <option disabled selected value>Select Option -->
       <!-- https://stackoverflow.com/questions/8605516/default-select-option-as-blank#answer-23638053 -->
 
       <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/option -->
