Add polyfill message within comments

--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -61,6 +61,7 @@
           document.querySelector (`[list=${datalist.id}]`)
 
       !!!  ('options' in datalist)
+        // polyfill HTMLDataList.options
         && (datalist.options = Array.from (options))
 
       datalist.querySelector ('select').addEventListener ('input', this.onchange)
