--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -42,34 +42,44 @@
 
 <script>
 
-  Element `datalist-`
-  // https://html.spec.whatwg.org/multipage/form-elements.html#the-datalist-element
-  (class extends HTMLElement {
+Element `datalist-`
+// https://html.spec.whatwg.org/multipage/form-elements.html#the-datalist-element
+(class extends HTMLElement {
 
-    initialize (datalists = document.querySelectorAll `datalist`) {
-      for (let datalist of datalists)
-        !!! ('options' in datalist)
-          && this.polyfill (datalist)
-    }
+  initialize (datalists = document.querySelectorAll `datalist`) {
+    for (let datalist of datalists)
+      !!! ('options' in datalist)
+        && this.polyfill (datalist)
+  }
 
-    polyfill (datalist) {
-      const
-        options =
-          datalist.querySelectorAll
-            `option:not(:disabled)`
+  polyfill (datalist) {
+    const
+      select =
+        datalist.querySelector `select`
 
-      , input =
-          document.querySelector (`[list=${datalist.id}]`)
+    , options =
+        datalist.querySelectorAll
+          `option:not(:disabled)`
+
+    , input =
+        document.querySelector (`[list=${datalist.id}]`)
 
 
-      // polyfill HTMLDataList.options
-      datalist.hidden  = true
-      datalist.options = Array.from (options)
+    // polyfill HTMLDataList.options
+    datalist.hidden  = true
+    datalist.options = Array.from (options)
 
-      input.addEventListener ('focus', e => datalist.hidden = false)
-      datalist.querySelector ('select').addEventListener ('input', this.onchange)
-    }
-  })
+    select.addEventListener
+      ('change',
+        (e, select = e.target) =>
+          (input.value = select.value)
+            && (select.selectedIndex = -1)
+              && (datalist.hidden = true))
+
+    input.addEventListener ('focus', e => datalist.hidden = false)
+    datalist.querySelector ('select').addEventListener ('input', this.onchange)
+  }
+})
 </script>
 
 <script src=/browser-sync.es></script>
