Add optgroup values

--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -27,6 +27,13 @@
       <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/optgroup -->
       <option>Female
       <option>Male
+      <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/optgroup -->
+      <optgroup label=LGBTM>
+        <option disabled value=Transgender>T
+      </optgroup>
+      <optgroup disabled label=Aliens>
+        <option value=Mars>Alien
+      </optgroup>
     </select>
   </label>
 </datalist>
