--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -10,7 +10,12 @@
 
 <header-group>
   <h2 slot=header>&lt;datalist-&gt;</h2>
-  <a  slot=subheader title='See more component examples' href=/examples>See more component examples</a>
+  <p slot=subheader>
+    <a title='See more component examples' href=/examples>See more component examples</a>
+    <br>
+    <a target=external href=https://jqueryui.com/autocomplete/>Inspired by jquery autocomplete</a>
+    <em><a target=external href=https://github.com/dyve/jquery-autocomplete/blob/master/src/jquery.autocomplete.js>(Source Code)</a></em>
+  </p>
 </header-group>
 
 <input list=foo>
