Remove name from select

--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -24,7 +24,7 @@
 <datalist id=foo>
 
   <label>
-    <select name=sex multiple>
+    <select multiple>
       <!-- <option disabled selected value>Select Option -->
       <!-- https://stackoverflow.com/questions/8605516/default-select-option-as-blank#answer-23638053 -->
 
