Add whitespace formatting to datalist-

--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -54,8 +54,8 @@
 
 <script>
 
-Element `datalist-`
-// https://html.spec.whatwg.org/multipage/form-elements.html#the-datalist-element
+Element `datalist-` // https://html.spec.whatwg.org/multipage/form-elements.html#the-datalist-element
+
 (class extends HTMLElement {
 
   initialize (datalists = document.querySelectorAll `datalist`) {
