Add Firefox quirk for options

--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -37,6 +37,7 @@
         <option disabled value=Transgender>T
       </optgroup>
       <optgroup disabled label=Aliens>
+        <!-- quirk with Firefox for selectable option nested within disabled optgroup -->
         <option value=Mars>Alien
       </optgroup>
     </select>
