--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -77,6 +77,9 @@ Element `datalist-` // https://html.spec.whatwg.org/multipage/form-elements.html
           `option:not(:disabled)`
 
 
+
+    this.fixate (input, datalist)
+
     // polyfill HTMLDataList.options
     datalist.hidden  = true
     datalist.options = Array.from (options)
@@ -90,6 +93,22 @@ Element `datalist-` // https://html.spec.whatwg.org/multipage/form-elements.html
 
     input.addEventListener
       ('focus', e => datalist.hidden = false)
+  }
+
+  fixate (input, datalist) {
+    const
+      rect  = input.getBoundingClientRect ()
+    , top   = rect.top - rect.height - 3
+    , left  = rect.left - 2
+    , width = rect.width + 500
+
+    datalist.style.top = top
+    datalist.style.left = left
+    datalist.style.width = width
+    datalist.style.position = 'absolute'
+
+    // should be a way to set style object
+    console.log (top, left, datalist.style.cssText)
   }
 })
 
