Add titles to options

--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -30,8 +30,9 @@
 
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/option -->
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/optgroup -->
-    <option>Female
-    <option>Male
+    <option title=Female>Female
+    <option title=Male>Male
+    <option>Male Whatever the hell someone damn well chooses to be
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/optgroup -->
     <optgroup label=LGBTM>
       <option disabled value=Transgender>T
