Fix styling declaration for select

--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -122,9 +122,10 @@ Element `datalist-` // https://html.spec.whatwg.org/multipage/form-elements.html
     select.style.minWidth = width
 
     // should be a way to set style object
-    datalist.style.top = top
-    datalist.style.left = left
-    datalist.style.position = 'absolute'
+    select.style.top = top
+    select.style.left = left
+    select.style.position = 'absolute'
+    datalist.hidden = false
   }
 })
 
