Add minheight for multiple select dropdown

--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -123,6 +123,7 @@ Element `datalist-` // https://html.spec.whatwg.org/multipage/form-elements.html
     // should be a way to set style object
     select.style.top = top
     select.style.left = left
+    select.style.minHeight = 100
     select.style.position = 'absolute'
     datalist.hidden = false
   }
