--- a/examples/datalist-/index.html
+++ b/examples/datalist-/index.html
@@ -121,6 +121,7 @@ Element `datalist-` // https://html.spec.whatwg.org/multipage/form-elements.html
     select.style.minWidth = width
 
     // should be a way to set style object
+    // try offsets - https://stackoverflow.com/questions/27922345/display-a-div-below-a-selected-input-field-no-jquery
     select.style.top = top
     select.style.left = left
     select.style.minHeight = 100
