Add links within details for Lifecycle

--- a/index.html
+++ b/index.html
@@ -127,7 +127,11 @@
         <summary><a href=#lifecycle>Lifecycle</a></summary>
 
         <ul>
-          <li></li>
+          <li>
+            <a href=#>Initiaize</a>
+
+          <li>
+            <a href=#>Render</a>
 
       </details>
 
