--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
   <pre><code>
   <em class=comment>&lt;!-- http(s): protocol required to run locally --&gt;</em>
-  &lt;script nomodule crossorigin src=https://unpkg.com/snuggsi&gt;&lt;/script&gt;
+  &lt;script src=https://unpkg.com/snuggsi&gt;&lt;/script&gt;
   </pre></code>
 
   <p class=center>Et Voila <em>(that's it!)</em> ツ
