Rearrange Installation text

--- a/index.html
+++ b/index.html
@@ -224,22 +224,14 @@
 <section view id=installation>
   <h1>Easy Installation</h1>
 
-  <p>No need for Node.js, Webpack, Babel, or Gulp.
-
-  <p><strong>snuggsiツ</strong> works in production or in a plain 'ol HTML file!
-
   <p>Simply place the following script within your webpage:</p>
 
   <pre><code>
-  <em class=comment>&lt;!-- http(s): protocol required to run locally --&gt;</em>
-  &lt;script src=https://unpkg.com/snuggsi&gt;&lt;/script&gt;
+  <em class=comment>&lt;!-- https:// required to run locally --&gt;</em>
+  &lt;script src=//unpkg.com/snuggsi&gt;&lt;/script&gt;
   </pre></code>
 
-  <p class=center>Et Voila <em>(that's it!)</em> ツ
-
-  <p class=center>See
-    <a target=github href=https://github.com/devpunks/snuggsi/wiki/Module-Imports>ECMAScript Module Imports</a>
-    for<code> &lt;script type=module&gt;</code> support!
+  <p><strong>snuggsiツ</strong> works in production or in a plain 'ol HTML file!
 
 </section>
 
