Add doctype to ie

--- a/public/ie.html
+++ b/public/ie.html
@@ -1,2 +1,6 @@
-<script src=https://unpkg.com/snuggsi@0.8.77/dist/snuggsi.min.js></script>
+<!DOCTYPE html>
+
+<script src=/snuggsi.js></script>
+
+<h1>Internet Explorer Test Page</h1>
 
