Update internet explorer test script

--- a/public/ie.html
+++ b/public/ie.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<script src=/snuggsi.js></script>
+<script type=application/javascript src=/></script>
 
 <h1>Internet Explorer Test Page</h1>
 
