Add more updates for Internet Explorer

--- a/public/ie.html
+++ b/public/ie.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<script type=application/javascript src=/></script>
+<script src=/snuggs.js></script>
 
 <h1>Internet Explorer Test Page</h1>
 
