Add background to h1

--- a/examples/ie.html
+++ b/examples/ie.html
@@ -26,6 +26,11 @@ Element ('hello-world')
 hello-world {
   background: red
 }
+
+h1 {
+  background: pink
+}
+
 </style>
 
 <script src=/browser-sync.es></script>
